# DeckSnag

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
decksnag/: __init__.py  __main__.py  capture.py  cli.py  comparison.py  config.py  exporter.py  presentation.py  utils.py
decksnag/gui/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_capture.py  test_cli.py  test_comparison.py  test_config.py  test_config_file.py  test_exporter.py  test_gui.py  test_presentation.py
video_to_powerpoint/: __init__.py  __main__.py  capture.py  cli.py  comparison.py  config.py  exporter.py  presentation.py  utils.py
video_to_powerpoint/gui/: __init__.py  app.py
